--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
+        "php": "^7.1.3",
         "illuminate/support": "^5.5|^6|^7|^8",
         "phpsysinfo/phpsysinfo": "~3.3.2"
     },
