--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "illuminate/support": "^5.5|^6|^7|^8",
         "phpsysinfo/phpsysinfo": "~3.3.2"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Justfine\\PhpSysInfo\\": "src/"
