--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "illuminate/support": "^5.5|^6|^7|^8",
+        "laravel/framework": "^5.5|| ^6.0 || ^7.0 || ^8.0",
         "phpsysinfo/phpsysinfo": "~3.3.2"
     },
     "minimum-stability": "dev",
